fixed spacing problem with tablets/phones(landsc)

--- a/styles/main.styl
+++ b/styles/main.styl
@@ -13,9 +13,8 @@ body
   font-family: 'Vollkorn', serif
   font-style: normal
   font-weight: 300
-  height: auto
-  margin: 0 auto
-  // width: auto
+  // height: 0 auto
+  // width: 0 auto
 
   /*---------- Main Container ---------- */
 
