--- a/styles/query.css
+++ b/styles/query.css
@@ -90,11 +90,11 @@
 
   /* --- */
 
-  .name { background-color: turquoise; margin-left: 22em; margin-top: 1.5em; position: absolute; width: auto; }
+  .name { margin-left: 22em; margin-top: 1.5em; position: absolute; width: auto; }
 
   .name-span { font-size: 9.15em; position: relative; right: 0.38em; text-align: center; top: 2em; white-space: nowrap; width: 340vw; }
 
-  .headline { background-color: red; margin-left: 40em; margin-top: 16em; position: absolute; text-transform: uppercase; }
+  .headline { margin-left: 40em; margin-top: 16em; position: absolute; text-transform: uppercase; }
 
   .headline-span { font-size: 6.25em; position: relative; right: 3em; text-align: center; top: 2.75em; white-space: nowrap; }
 
@@ -102,13 +102,13 @@
 
   /* --- */
 
-  .middle-third { display: flex; justify-content: space-around; }
+  .middle-third { display: flex;  justify-content: space-around; }
 
   .about { float: left; width: 52%; }
 
-  .about p { border: 27px double black; font-size: 5em; margin-top: 25em; padding: 0 1em 0 1em; }
+  .about p { border: 27px double black; font-size: 5em; margin-top: 5em; padding: 0 1em 0 1em; }
 
-  .my-face { background-color: pink; float: right; height: 450px; margin-bottom: 10em; margin-top: 150em; width: 450px; }
+  .my-face { background-color: pink; float: right; height: 450px; margin-bottom: 10em; margin-top: 52em; width: 450px; }
 
   .tech { display: flex; flex-direction: column; padding: 0 15em 0 15em; }
 
